Added built-in translator and current language support at widget views.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Widgets/Category.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Widgets/Category.cshtml
@@ -2,8 +2,8 @@
 @using NetCoreCMS.Modules.Blog.Models
 @{
     var i = 0;
-    _T = (INccTranslator) ViewData["_T"];
-    CurrentLanguage = (string) ViewData["CurrentLanguage"];
+    //_T = (INccTranslator) ViewData["_T"];
+    //CurrentLanguage = (string) ViewData["CurrentLanguage"];
 }
 @model CategoryViewModel
 
