--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Widgets/RecentComments.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Widgets/RecentComments.cshtml
@@ -1,8 +1,8 @@
 ﻿@using NetCoreCMS.Framework.Core.Mvc.Models
 @{
     var i = 0;
-    _T = (INccTranslator)ViewData["_T"];
-    CurrentLanguage = (string)ViewData["CurrentLanguage"];
+    //_T = (INccTranslator)ViewData["_T"];
+    //CurrentLanguage = (string)ViewData["CurrentLanguage"];
 }
 @model List<NccComment>
 
