Language selection changed to link

--- a/NetCoreCMS.Web/Themes/NccSeventeen/wwwroot/css/blue-skin.css
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/wwwroot/css/blue-skin.css
@@ -110,7 +110,8 @@ body {
         background-color: #324191;
     }
 
-.selectLanguage select {
+/*Language dropdown start*/
+/*.selectLanguage select {
     background-color: #324191;
     border-color: #3f51b5;
     color: #FFF;
@@ -126,7 +127,19 @@ body {
         background-color: #324191;
         border-color: #3f51b5;
         color: #FFF;
-    }
+    }*/
+.dropbtn {
+    background-color: transparent;
+    color: white;
+}
+.dropdown-content a:hover {
+    background-color: #3f51b5;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3f51b5;
+}
+/*Language dropdown end*/
 
 footer {
     background-color: #3f51b5;
@@ -183,3 +196,4 @@ footer a {
         color: #FFF;
         background-color: #3f51b5;
     }
+
