--- a/NetCoreCMS.Web/Themes/NccSeventeen/wwwroot/css/red-skin.css
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/wwwroot/css/red-skin.css
@@ -110,7 +110,10 @@ body {
         background-color: #ad140c;
     }
 
-.selectLanguage select {
+
+
+/*Language dropdown start*/
+/*.selectLanguage select {
     background-color: #ad140c;
     border-color: #d81910;
     color: #FFF;
@@ -126,7 +129,21 @@ body {
         background-color: #ad140c;
         border-color: #d81910;
         color: #FFF;
-    }
+    }*/
+.dropbtn {
+    background-color: transparent;
+    color: white;
+}
+
+.dropdown-content a:hover {
+    background-color: #d81910;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #d81910;
+}
+/*Language dropdown end*/
+
 
 footer {
     background-color: #d81910;
