--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_SelectLanguagePartial.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_SelectLanguagePartial.cshtml
@@ -7,14 +7,72 @@
 @{  
     var requestCulture = Context.Features.Get<IRequestCultureFeature>();
     var cultureItems = LocOptions.Value.SupportedUICultures
-        .Select(c => new { Value = c.TwoLetterISOLanguageName.ToLower(), Text = c.TwoLetterISOLanguageName.ToUpper()})
+        .Select(c => new { Value = c.TwoLetterISOLanguageName.ToLower(), Text = c.NativeName})
         .ToList();
-    var selectList = new SelectList(cultureItems, "Value", "Text", CurrentLanguage);
+    //var selectList = new SelectList(cultureItems, "Value", "Text", CurrentLanguage);
+    var cl = LocOptions.Value.SupportedUICultures.Where(x => x.TwoLetterISOLanguageName.ToLower() == CurrentLanguage).Select(c => new { Value = c.TwoLetterISOLanguageName.ToLower(), Text = c.NativeName });
 }
-<form id="selectLanguage" asp-controller="Home" asp-action="SetLanguage" asp-route-returnUrl="@Context.Request.Path" method="post" class="form-inline selectLanguage" role="form" style="display:inline;">
+@*<form id="selectLanguage" asp-controller="Home" asp-action="SetLanguage" asp-route-returnUrl="@Context.Request.Path" method="post" class="form-inline selectLanguage" role="form" style="display:inline;">
     <div class="form-group">
         <label for="exampleInputName2">@_T["Language"]</label>
         <select class="btn" name="culture" id="culture" onchange="this.form.submit();" asp-items="selectList"></select>
     </div>
 </form>
+<span>|</span>*@
+
+
+<style>
+    .dropbtn {
+        background-color: transparent;
+        /*color: white;*/
+        /*padding: 16px;*/
+        /*font-size: 16px;*/
+        border: none;
+        cursor: pointer;
+    }
+
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        /*background-color: #f9f9f9;*/
+        /*min-width: 160px;*/
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+        .dropdown-content a {
+            /*color: black;*/
+            padding: 4px 4px;
+            text-decoration: none;
+            display: block;
+        }
+
+            .dropdown-content a:hover {
+                /*background-color: #3f51b5;*/
+            }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    .dropdown:hover .dropbtn {
+        /*background-color: #3f51b5;*/
+    }
+</style>
+<div class="dropdown">
+    <button class="dropbtn">@cl.FirstOrDefault().Text <span class="glyphicon glyphicon-triangle-bottom"></span> </button>
+    <div class="dropdown-content">
+        @foreach (var item in cultureItems)
+        {
+            <a href="/Home/SetLanguage/?culture=@item.Value&returnUrl=@Context.Request.Path">@item.Text</a>
+        }
+        
+        @*<a href="#">Link 2</a>*@
+    </div>
+</div>
 <span>|</span>
