changes language code

--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_HomeLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_HomeLayout.cshtml
@@ -5,7 +5,7 @@
     ThemeResources.RegisterResources(CurrentLayout);
 }
 <!DOCTYPE html>
-<html lang="@CurrentLanguage">
+<html lang="@CurrentLanguageCode">
 <head>
     @NccRenderHead()
     @Html.Raw(JavaScriptSnippet.FullScript)
