--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_HomeLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/_HomeLayout.cshtml
@@ -3,7 +3,7 @@
 }
 
 <!DOCTYPE html>
-<html lang="@CurrentLanguage">
+<html lang="@CurrentLanguageCode">
 <head>
     @NccRenderHead()
     @Html.Raw(JavaScriptSnippet.FullScript)
