--- a/NetCoreCMS.Web/Views/Shared/_SelectLanguagePartial.cshtml
+++ b/NetCoreCMS.Web/Views/Shared/_SelectLanguagePartial.cshtml
@@ -5,7 +5,7 @@
 @using System.Web;
 @using System.Net;
 
-@inject IStringLocalizer _T
+@*@inject IStringLocalizer _T*@
 @inject IOptions<RequestLocalizationOptions> LocOptions
 
 
@@ -30,11 +30,67 @@
     {
         lang = "/" + currentLanguage;
     }
+    var cl = LocOptions.Value.SupportedUICultures.Where(x => x.TwoLetterISOLanguageName.ToLower() == CurrentLanguage).Select(c => new { Value = c.TwoLetterISOLanguageName.ToLower(), Text = c.NativeName });
 }
-<form id="selectLanguage" action="@lang/Home/SetLanguage/" method="post" class="form-inline" role="form" style="display:inline;">
+@*<form id="selectLanguage" action="@lang/Home/SetLanguage/" method="post" class="form-inline" role="form" style="display:inline;">
     <div class="form-group">
         <input type="hidden" id="returnUrl" name="returnUrl" value="@returnUrl"/>
         <label for="exampleInputName2">@_T["Language"]</label>
         <select class="btn btn-mini btn-default" name="culture" id="culture" onchange="this.form.submit();"  asp-items="selectList"></select>
     </div>
-</form>
+</form>*@
+
+
+<style>
+    .dropbtn {
+        background-color: transparent;
+        /*color: white;*/
+        /*padding: 16px;*/
+        /*font-size: 16px;*/
+        border: none;
+        cursor: pointer;
+    }
+
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        /*background-color: #f9f9f9;*/
+        /*min-width: 160px;*/
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+    }
+
+        .dropdown-content a {
+            /*color: black;*/
+            padding: 4px 4px;
+            text-decoration: none;
+            display: block;
+        }
+
+            .dropdown-content a:hover {
+                /*background-color: #3f51b5;*/
+            }
+
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    .dropdown:hover .dropbtn {
+        /*background-color: #3f51b5;*/
+    }
+</style>
+<label for="exampleInputName2">@_T["Language"]</label>
+<div class="dropdown">
+    <button class="dropbtn">@cl.FirstOrDefault().Text <span class="glyphicon glyphicon-triangle-bottom"></span> </button>
+    <div class="dropdown-content">
+        @foreach (var item in cultureItems)
+        {
+            <a href="/Home/SetLanguage/?culture=@item.Value&returnUrl=@Context.Request.Path">@item.Text</a>
+        }
+    </div>
+</div>
