Tag Cloud widget added

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Category/Details.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Category/Details.cshtml
@@ -47,7 +47,7 @@
                             {<span>Anonymous</span> }
                             <span> | Published Date: @item.PublishDate.ToString("MMM dd, yyyy")</span>
 
-                            | <a href="#">@item.Comments.Count() Comments</a>                            
+                            @*| <a href="#">@item.Comments.Count() Comments</a>*@
                             @if (item.Tags.Count > 0)
                             {
                                 <span>| Tags :</span>
