--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Tags/Details.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Tags/Details.cshtml
@@ -40,7 +40,7 @@
                             {<span>Anonymous</span> }
                             <span> | Published Date: @item.PublishDate.ToString("MMM dd, yyyy")</span>
 
-                            | <a href="#">@item.Comments.Count() Comments</a>
+                            @*| <a href="#">@item.Comments.Count() Comments</a>*@
                             @if (item.Categories.Count > 0)
                             {
                                 <span>| Category :</span>
