--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Widgets/Archive.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Widgets/Archive.cshtml
@@ -15,7 +15,7 @@
     }
     else
     {
-        <hr />
+        <hr style="margin:0px;" />
     }
     <p>
         <a href="/Post/?year=@item.Year&month=@item.MonthValue">
