--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Widgets/Category.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Blog/Views/Widgets/Category.cshtml
@@ -26,7 +26,7 @@
         }
         else
         {
-            <hr />
+            <hr style="margin:0px;" />
         }
         <p>
             <a href="/Category/@itemDetails.Slug">
