deleted extra files

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Media/Views/MediaHome/Index.cshtml
@@ -20,7 +20,7 @@
 }
 
 @section Styles{
-    <link href="~/lib/lightbox2/src/css/lightbox.css" rel="stylesheet" />
+    <link href="~/lib/lightbox2/dist/css/lightbox.min.css" rel="stylesheet" />
 }  
 <style>
     .mediaBox {
@@ -142,7 +142,7 @@
 
 
 @section Scripts{
-    <script src="~/lib/lightbox2/src/js/lightbox.js"></script>
+    <script src="~/lib/lightbox2/dist/js/lightbox.min.js"></script>
     <script>
         function selectFile(fileUrl, inputId) {
             //console.log(fileUrl);
